syntax = "proto3";

package competition;

option go_package = "../protocol";

message SubmissionInfo {
  string id               = 1;
  string competition_id   = 2;
  string phase            = 3;
  string status           = 4;
  float score             = 5;
  string player_id        = 6;
}

message SubmissionResult {}

service Competition {
  rpc SetSubmissionInfo(SubmissionInfo) returns (SubmissionResult) {}
}
